client/src/components/Header/header.css
.site-header {
  position: fixed;
  top: 0;
  width: 100%;
  z-index: var(--z-index-site-header);
}

.skip-to-content-button {
  position: absolute;
  top: calc(var(--header-height) + 10px);
  border-radius: 15px;
  font-weight: 600;
  padding-block: 1em;
  padding-inline: 1.5em;
  left: -1000px;
  z-index:100;
}

.skip-to-content-button:focus {
  left: 10px;
  border:red;
}
@media screen and (max-width:500px) {
  .skip-to-content-button{
    padding-block: 0.5em;
    padding-inline:.75em;
    font-size:16px;
  }
}

